Add sorting to api endpoints
